--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -1,6 +1,6 @@
-# 2018年10月7日 15:37 UTC/GMT +9
+# 2018年11月13日 22:40 UTC/GMT +9
 
-#【Settings】——【Favorites】——【+】——【Filter】，输入名字（随意，如"Stick Rules"），填上链接地址，勾选Filter Action，找到选项，左滑选择【Replace】，然后【OK】。
+#「设置」——「订阅」——「+」——「分流」，输入名字（随意，如"Stick Rules"），填上链接地址，勾选个性化保存，保存找到选项，左滑选择「替换」，然后「保存」。
 
 [SERVER]
 
