--- a/Quantumult_media_only.conf
+++ b/Quantumult_media_only.conf
@@ -8333,10 +8333,10 @@ DOMAIN-SUFFIX,music.qq.com,PROXY
 DOMAIN-SUFFIX,y.qq.com,PROXY
 
 // Tencent Video
-DOMAIN-SUFFIX,vv.video.qq.com
+DOMAIN-SUFFIX,vv.video.qq.com,PROXY
 
 // Youku
-IP-CIDR,106.11.0.0/16,no-resolve
+IP-CIDR,106.11.0.0/16,PROXY,no-resolve
 
 // 传说对决
 USER-AGENT,kgtw*,DIRECT
