--- a/Quantumult_media_only.conf
+++ b/Quantumult_media_only.conf
@@ -1,4 +1,4 @@
-# 2018年11月13日 22:37 UTC/GMT +9
+# 2018年11月16日 23:14 UTC/GMT +9
 
 #「设置」——「订阅」——「+」——「分流」，输入名字（随意，如"Stick Rules"），填上链接地址，勾选个性化保存，保存找到选项，左滑选择「替换」，然后「保存」。
 
@@ -343,7 +343,6 @@ DOMAIN-KEYWORD,adwords,REJECT
 DOMAIN-KEYWORD,allyes,REJECT
 DOMAIN-KEYWORD,analysis,REJECT
 DOMAIN-KEYWORD,analysys,REJECT
-DOMAIN-KEYWORD,analytics,REJECT
 DOMAIN-KEYWORD,applovin,REJECT
 DOMAIN-KEYWORD,cnzz,REJECT
 DOMAIN-KEYWORD,dnserror,REJECT
@@ -2244,7 +2243,6 @@ DOMAIN-SUFFIX,ccb.uncle-ad.com,REJECT
 DOMAIN-SUFFIX,ccbaihehq.com,REJECT
 DOMAIN-SUFFIX,ccclub.cmbchina.com,REJECT
 DOMAIN-SUFFIX,cccrir.com,REJECT
-DOMAIN-SUFFIX,ccdace.hupu.com,REJECT
 DOMAIN-SUFFIX,ccr.yxdown.com,REJECT
 DOMAIN-SUFFIX,cctyly.com,REJECT
 DOMAIN-SUFFIX,cd.bendibao.com,REJECT
@@ -8320,6 +8318,9 @@ IP-CIDR,119.176.0.0/12,PROXY,no-resolve
 // letv
 DOMAIN-SUFFIX,api.mob.app.letv.com,PROXY
 
+// MOO
+USER-AGENT,MOO*,PROXY
+
 // NeteaseMusic
 USER-AGENT,%E7%BD%91%E6%98%93%E4%BA%91%E9%9F%B3%E4%B9%90*,PROXY
 USER-AGENT,NeteaseMusic*,PROXY
@@ -8634,6 +8635,7 @@ DOMAIN-SUFFIX,disconnect.me,DIRECT
 DOMAIN-SUFFIX,disq.us,DIRECT
 DOMAIN-SUFFIX,disqus.com,DIRECT
 DOMAIN-SUFFIX,disquscdn.com,DIRECT
+DOMAIN-SUFFIX,dlercloud.com,DIRECT
 DOMAIN-SUFFIX,dnsimple.com,DIRECT
 DOMAIN-SUFFIX,docker.com,DIRECT
 DOMAIN-SUFFIX,doub.io,DIRECT
