--- a/Quantumult_lite.conf
+++ b/Quantumult_lite.conf
@@ -1,4 +1,4 @@
-# 2018年11月17日 00:32 UTC/GMT +9
+# 2018年11月17日 21:45 UTC/GMT +9
 
 #「设置」——「订阅」——「+」——「分流」，输入名字（随意，如"Stick Rules Lite"），填上链接地址，勾选个性化保存，保存找到选项，左滑选择「替换」，然后「保存」。
 
@@ -2104,7 +2104,7 @@ DOMAIN-SUFFIX,smartisan.com,PROXY
 DOMAIN-SUFFIX,umetrip.com,PROXY
 DOMAIN-SUFFIX,yiche.com,PROXY
 
-DOMAIN-SUFFIX,12306.com,PROXY
+DOMAIN-SUFFIX,12306.cn,PROXY
 DOMAIN-SUFFIX,126.net,PROXY
 DOMAIN-SUFFIX,163.com,PROXY
 DOMAIN-SUFFIX,360.cn,PROXY
@@ -2337,6 +2337,9 @@ IP-CIDR,139.220.243.27/32,PROXY,no-resolve
 IP-CIDR,172.16.102.56/32,PROXY,no-resolve
 IP-CIDR,185.188.32.1/28,PROXY,no-resolve
 IP-CIDR,221.226.128.146/32,PROXY,no-resolve
+
+// 腾讯IP
+IP-CIDR,134.175.0.0/16,PROXY
 
 DOMAIN-SUFFIX,cn,PROXY
 
