--- a/Quantumult_media_only_lite.conf
+++ b/Quantumult_media_only_lite.conf
@@ -1,4 +1,4 @@
-# 2018年11月17日 00:50 UTC/GMT +9
+# 2018年11月17日 21:49 UTC/GMT +9
 
 #「设置」——「订阅」——「+」——「分流」，输入名字（随意，如"Stick Media Only Lite"），填上链接地址，勾选个性化保存，保存找到选项，左滑选择「替换」，然后「保存」。
 
@@ -2143,7 +2143,7 @@ DOMAIN-SUFFIX,smartisan.com,DIRECT
 DOMAIN-SUFFIX,umetrip.com,DIRECT
 DOMAIN-SUFFIX,yiche.com,DIRECT
 
-DOMAIN-SUFFIX,12306.com,DIRECT
+DOMAIN-SUFFIX,12306.cn,DIRECT
 DOMAIN-SUFFIX,126.net,DIRECT
 DOMAIN-SUFFIX,163.com,DIRECT
 DOMAIN-SUFFIX,360.cn,DIRECT
@@ -2376,6 +2376,9 @@ IP-CIDR,139.220.243.27/32,DIRECT,no-resolve
 IP-CIDR,172.16.102.56/32,DIRECT,no-resolve
 IP-CIDR,185.188.32.1/28,DIRECT,no-resolve
 IP-CIDR,221.226.128.146/32,DIRECT,no-resolve
+
+// 腾讯IP
+IP-CIDR,134.175.0.0/16,DIRECT
 
 DOMAIN-SUFFIX,cn,DIRECT
 
