--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -1,4 +1,4 @@
-# 2018年11月17日 21:44 UTC/GMT +9
+# 2018年11月21日 22:19 UTC/GMT +9
 
 #「设置」——「订阅」——「+」——「分流」，输入名字（随意，如"Stick Rules"），填上链接地址，勾选个性化保存，保存找到选项，左滑选择「替换」，然后「保存」。
 
@@ -2443,6 +2443,8 @@ DOMAIN-SUFFIX,cmsapi.wifi8.com,REJECT
 DOMAIN-SUFFIX,cmshow.gtimg.cn,REJECT
 DOMAIN-SUFFIX,cmslayue.com,REJECT
 DOMAIN-SUFFIX,cmx.autohome.com.cn,REJECT
+DOMAIN-SUFFIX,cnzz.cn,REJECT
+DOMAIN-SUFFIX,cnzz.com,REJECT
 DOMAIN-SUFFIX,cn.pub.vpon.com,REJECT
 DOMAIN-SUFFIX,cn.tatami-solutions.com,REJECT
 DOMAIN-SUFFIX,cnbole.net,REJECT
@@ -6185,7 +6187,6 @@ DOMAIN-SUFFIX,pv.enet.com.cn,REJECT
 DOMAIN-SUFFIX,pv.focus.cn,REJECT
 DOMAIN-SUFFIX,pv.ra.icast.cn,REJECT
 DOMAIN-SUFFIX,pv.sogou.com,REJECT
-DOMAIN-SUFFIX,pv.sohu.com,REJECT
 DOMAIN-SUFFIX,pv.xcar.com.cn,REJECT
 DOMAIN-SUFFIX,pv.zdnet.com.cn,REJECT
 DOMAIN-SUFFIX,pv.zol.com.cn,REJECT
