--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -1,6 +1,7 @@
-# 2018年11月21日 22:19 UTC/GMT +9
+# 2018年12月7日 16:16 UTC/GMT +9
 
-#「设置」——「订阅」——「+」——「分流」，输入名字（随意，如"Stick Rules"），填上链接地址，勾选个性化保存，保存找到选项，左滑选择「替换」，然后「保存」。
+#「设置」——「订阅」——「+」——「分流」，输入名字（随意，如"Stick Rules"）
+# 填上链接地址，勾选个性化保存，保存找到选项，左滑选择「替换」，然后「保存」
 
 [SERVER]
 
@@ -327,47 +328,6 @@ DOMAIN-SUFFIX,bfshan.cn,REJECT
 // Client
 PROCESS-NAME,Jietu,REJECT
 
-DOMAIN-KEYWORD,admarvel,REJECT
-DOMAIN-KEYWORD,admaster,REJECT
-DOMAIN-KEYWORD,admdfs,REJECT
-DOMAIN-KEYWORD,adnewnc,REJECT
-DOMAIN-KEYWORD,adsage,REJECT
-DOMAIN-KEYWORD,adsame,REJECT
-DOMAIN-KEYWORD,adsensor,REJECT
-DOMAIN-KEYWORD,adserver,REJECT
-DOMAIN-KEYWORD,adservice,REJECT
-DOMAIN-KEYWORD,adsmogo,REJECT
-DOMAIN-KEYWORD,adsrvmedia,REJECT
-DOMAIN-KEYWORD,adsserving,REJECT
-DOMAIN-KEYWORD,advert,REJECT
-DOMAIN-KEYWORD,adwords,REJECT
-DOMAIN-KEYWORD,allyes,REJECT
-DOMAIN-KEYWORD,analysis,REJECT
-DOMAIN-KEYWORD,analysys,REJECT
-DOMAIN-KEYWORD,applovin,REJECT
-DOMAIN-KEYWORD,cnzz,REJECT
-DOMAIN-KEYWORD,dnserror,REJECT
-DOMAIN-KEYWORD,domob,REJECT
-DOMAIN-KEYWORD,duomeng,REJECT
-DOMAIN-KEYWORD,dwtrack,REJECT
-DOMAIN-KEYWORD,googleads,REJECT
-DOMAIN-KEYWORD,guanggao,REJECT
-DOMAIN-KEYWORD,inmobi,REJECT
-DOMAIN-KEYWORD,lianmeng,REJECT
-DOMAIN-KEYWORD,mobaders,REJECT
-DOMAIN-KEYWORD,omgmta,REJECT
-DOMAIN-KEYWORD,openx,REJECT
-DOMAIN-KEYWORD,partnerad,REJECT
-DOMAIN-KEYWORD,securepubads,REJECT
-DOMAIN-KEYWORD,socdm,REJECT
-DOMAIN-KEYWORD,supersonicads,REJECT
-DOMAIN-KEYWORD,taboola,REJECT
-DOMAIN-KEYWORD,uedas,REJECT
-DOMAIN-KEYWORD,umeng,REJECT
-DOMAIN-KEYWORD,umtrack,REJECT
-DOMAIN-KEYWORD,wlmonitor,REJECT
-DOMAIN-KEYWORD,zjtoolbar,REJECT
-
 DOMAIN-SUFFIX,0.r.msn.com,REJECT
 DOMAIN-SUFFIX,000dn.com,REJECT
 DOMAIN-SUFFIX,001union.com,REJECT
@@ -584,7 +544,6 @@ DOMAIN-SUFFIX,3rd.t.sohu.com,REJECT
 DOMAIN-SUFFIX,3wz6z.bchuangpi.cn,REJECT
 DOMAIN-SUFFIX,3ygww.com,REJECT
 DOMAIN-SUFFIX,404.safedog.cn,REJECT
-DOMAIN-SUFFIX,4171764.fls.doubleclick.net,REJECT
 DOMAIN-SUFFIX,4207008.com,REJECT
 DOMAIN-SUFFIX,4242jj.com,REJECT
 DOMAIN-SUFFIX,4242lll.com,REJECT
@@ -979,7 +938,6 @@ DOMAIN-SUFFIX,ad.digitimes.com.tw,REJECT
 DOMAIN-SUFFIX,ad.directmirror.com,REJECT
 DOMAIN-SUFFIX,ad.dokrmob.com,REJECT
 DOMAIN-SUFFIX,ad.doubanio.com,REJECT
-DOMAIN-SUFFIX,ad.doubleclick.net,REJECT
 DOMAIN-SUFFIX,ad.download.cnet.com,REJECT
 DOMAIN-SUFFIX,ad.dqwjzm.com,REJECT
 DOMAIN-SUFFIX,ad.duapps.com,REJECT
@@ -1021,7 +979,6 @@ DOMAIN-SUFFIX,ad.jamba.net,REJECT
 DOMAIN-SUFFIX,ad.jamster.co.uk,REJECT
 DOMAIN-SUFFIX,ad.jamster.com,REJECT
 DOMAIN-SUFFIX,ad.jiemian.com,REJECT
-DOMAIN-SUFFIX,ad.jp.doubleclick.net,REJECT
 DOMAIN-SUFFIX,ad.jsnbrynb.com,REJECT
 DOMAIN-SUFFIX,ad.jxnews.com.cn,REJECT
 DOMAIN-SUFFIX,ad.kissanime.io,REJECT
@@ -1137,7 +1094,6 @@ DOMAIN-SUFFIX,adadmin.house365.com,REJECT
 DOMAIN-SUFFIX,adadvisor.net,REJECT
 DOMAIN-SUFFIX,ad-android.51wnl.com,REJECT
 DOMAIN-SUFFIX,adap.tv,REJECT
-DOMAIN-SUFFIX,ad-apac.doubleclick.net,REJECT
 DOMAIN-SUFFIX,adapi.lenovogame.com,REJECT
 DOMAIN-SUFFIX,adasad.myweb.hinet.net,REJECT
 DOMAIN-SUFFIX,adash.m.taobao.com,REJECT
@@ -1162,7 +1118,6 @@ DOMAIN-SUFFIX,adchina.com,REJECT
 DOMAIN-SUFFIX,adcitrus.com,REJECT
 DOMAIN-SUFFIX,adcl.pchome.com.tw,REJECT
 DOMAIN-SUFFIX,adclick.g.doublecklick.net,REJECT
-DOMAIN-SUFFIX,adclick.g.doubleclick.net,REJECT
 DOMAIN-SUFFIX,adclient.uimserv.net,REJECT
 DOMAIN-SUFFIX,adclock.zdworks.com,REJECT
 DOMAIN-SUFFIX,adcloud.jp,REJECT
@@ -1425,7 +1380,6 @@ DOMAIN-SUFFIX,adytx.com,REJECT
 DOMAIN-SUFFIX,adyun.com,REJECT
 DOMAIN-SUFFIX,adz.zwee.ly,REJECT
 DOMAIN-SUFFIX,adzerk.net,REJECT
-DOMAIN-SUFFIX,ae.bdstatic.com,REJECT
 DOMAIN-SUFFIX,aec.shjk123.net,REJECT
 DOMAIN-SUFFIX,aecpm.alicdn.com,REJECT
 DOMAIN-SUFFIX,ae-gb.mgid.com,REJECT
@@ -1968,7 +1922,6 @@ DOMAIN-SUFFIX,bglog.bitauto.com,REJECT
 DOMAIN-SUFFIX,bgrndi.com,REJECT
 DOMAIN-SUFFIX,bh.contextweb.com,REJECT
 DOMAIN-SUFFIX,bhjac.azvub.cn,REJECT
-DOMAIN-SUFFIX,bid.g.doubleclick.net,REJECT
 DOMAIN-SUFFIX,biddingos.com,REJECT
 DOMAIN-SUFFIX,biddingx.com,REJECT
 DOMAIN-SUFFIX,bidvertiser.com,REJECT
@@ -2424,7 +2377,6 @@ DOMAIN-SUFFIX,cm.baidu.com,REJECT
 DOMAIN-SUFFIX,cm.bilibili.com,REJECT
 DOMAIN-SUFFIX,cm.ctnsnet.com,REJECT
 DOMAIN-SUFFIX,cm.eyereturn.com,REJECT
-DOMAIN-SUFFIX,cm.g.doubleclick.net,REJECT
 DOMAIN-SUFFIX,cm.jd.com,REJECT
 DOMAIN-SUFFIX,cm.mct01.com,REJECT
 DOMAIN-SUFFIX,cm.netseer.com,REJECT
@@ -3464,7 +3416,6 @@ DOMAIN-SUFFIX,f1.luoshenbest.cn,REJECT
 DOMAIN-SUFFIX,f1.meishichina.com,REJECT
 DOMAIN-SUFFIX,f1.p0y.cn,REJECT
 DOMAIN-SUFFIX,f1.pig66.com,REJECT
-DOMAIN-SUFFIX,f10.baidu.com,REJECT
 DOMAIN-SUFFIX,f1190.com,REJECT
 DOMAIN-SUFFIX,f1c.i.biquge5200.com,REJECT
 DOMAIN-SUFFIX,f2.p0y.cn,REJECT
@@ -3799,11 +3750,12 @@ DOMAIN-SUFFIX,godloveme.cn,REJECT
 DOMAIN-SUFFIX,gog9.qzdfc.com,REJECT
 DOMAIN-SUFFIX,go-mpulse.net,REJECT
 DOMAIN-SUFFIX,good.ta80.com,REJECT
+DOMAIN-SUFFIX,googleadservices.com,REJECT
+DOMAIN-SUFFIX,googleadsserving.cn,REJECT
 DOMAIN-SUFFIX,googlecommerce.com,REJECT
 DOMAIN-SUFFIX,googlesyndication.com,REJECT
 DOMAIN-SUFFIX,googletagmanager.com,REJECT
 DOMAIN-SUFFIX,googletagservices.com,REJECT
-DOMAIN-SUFFIX,googletakes.com,REJECT
 DOMAIN-SUFFIX,goolpter.com,REJECT
 DOMAIN-SUFFIX,gopig.io,REJECT
 DOMAIN-SUFFIX,gorgon.youdao.com,REJECT
@@ -4209,7 +4161,6 @@ DOMAIN-SUFFIX,img.yingshidiguo.cn,REJECT
 DOMAIN-SUFFIX,img.yuyue007.cn,REJECT
 DOMAIN-SUFFIX,img.zsj18.com,REJECT
 DOMAIN-SUFFIX,img.zuowen8.com,REJECT
-DOMAIN-SUFFIX,img.zuoyebang.cc,REJECT
 DOMAIN-SUFFIX,img.zx590.com,REJECT
 DOMAIN-SUFFIX,img0.egou.com,REJECT
 DOMAIN-SUFFIX,img01.taotaosou.cn,REJECT
@@ -4777,7 +4728,13 @@ DOMAIN-SUFFIX,l.adiers.com,REJECT
 DOMAIN-SUFFIX,l.betrad.com,REJECT
 DOMAIN-SUFFIX,l.minisplat.cn,REJECT
 DOMAIN-SUFFIX,l.mnjkw.cn,REJECT
-DOMAIN-SUFFIX,l.qq.com,REJECT
+//DOMAIN-SUFFIX,l.qq.com,REJECT
+DOMAIN-SUFFIX,lives.l.qq.com,REJECT
+DOMAIN-SUFFIX,livep.l.qq.com,REJECT
+DOMAIN-SUFFIX,news.l.qq.com,REJECT
+DOMAIN-SUFFIX,mi.gdt.qq.com,REJECT
+DOMAIN-SUFFIX,mtrace.qq.com,REJECT
+DOMAIN-SUFFIX,pingma.qq.com,REJECT
 DOMAIN-SUFFIX,l.supfast.net,REJECT
 DOMAIN-SUFFIX,l.ujian.cc,REJECT
 DOMAIN-SUFFIX,l.yidianzixun.com,REJECT
@@ -5614,7 +5571,6 @@ DOMAIN-SUFFIX,myycrw.com,REJECT
 DOMAIN-SUFFIX,myzk1.com,REJECT
 DOMAIN-SUFFIX,myzwqwe12.com,REJECT
 DOMAIN-SUFFIX,mzy2014.com,REJECT
-DOMAIN-SUFFIX,n.3g.163.com,REJECT
 DOMAIN-SUFFIX,n.a.mosenni.com,REJECT
 DOMAIN-SUFFIX,n.ads3-adnow.com,REJECT
 DOMAIN-SUFFIX,n.amoad.com,REJECT
@@ -5896,7 +5852,6 @@ DOMAIN-SUFFIX,page.xywy.com,REJECT
 DOMAIN-SUFFIX,pagead.google.com,REJECT
 DOMAIN-SUFFIX,pagead.l.google.com,REJECT
 DOMAIN-SUFFIX,pagead2.googlesyndication.com,REJECT
-DOMAIN-SUFFIX,pagead46.l.doubleclick.net,REJECT
 DOMAIN-SUFFIX,pagead-tpc.l.google.com,REJECT
 DOMAIN-SUFFIX,pagechoice.com,REJECT
 DOMAIN-SUFFIX,pagechoice.net,REJECT
@@ -6146,7 +6101,6 @@ DOMAIN-SUFFIX,pub.chinadailyasia.com,REJECT
 DOMAIN-SUFFIX,pub.funshion.com,REJECT
 DOMAIN-SUFFIX,pub.mop.com,REJECT
 DOMAIN-SUFFIX,pub1.cope.es,REJECT
-DOMAIN-SUFFIX,pubads.g.doubleclick.net,REJECT
 DOMAIN-SUFFIX,pubbirdf.com,REJECT
 DOMAIN-SUFFIX,public.app.autohome.com.cn,REJECT
 DOMAIN-SUFFIX,public6.com,REJECT
@@ -8059,7 +8013,6 @@ DOMAIN-SUFFIX,yeas.yahoo.co.jp,REJECT
 DOMAIN-SUFFIX,yee.js.cn,REJECT
 DOMAIN-SUFFIX,yellowto.com,REJECT
 DOMAIN-SUFFIX,yengo.com,REJECT
-DOMAIN-SUFFIX,yes1.feng.com,REJECT
 DOMAIN-SUFFIX,yesbeby.whies.info,REJECT
 DOMAIN-SUFFIX,yess.imneinei.com,REJECT
 DOMAIN-SUFFIX,yezilm.com,REJECT
