--- a/Quantumult_lite.conf
+++ b/Quantumult_lite.conf
@@ -1,6 +1,7 @@
-# 2018年11月17日 21:45 UTC/GMT +9
+# 2018年12月7日 16:45 UTC/GMT +9
 
-#「设置」——「订阅」——「+」——「分流」，输入名字（随意，如"Stick Rules Lite"），填上链接地址，勾选个性化保存，保存找到选项，左滑选择「替换」，然后「保存」。
+#「设置」——「订阅」——「+」——「分流」，输入名字（随意，如"Stick Rules Lite"）
+# 填上链接地址，勾选个性化保存，保存找到选项，左滑选择「替换」，然后「保存」。
 
 [SERVER]
 
@@ -79,7 +80,7 @@ DOMAIN-SUFFIX,c.uaa.iqiyi.com,REJECT
 DOMAIN-SUFFIX,cloudpush.iqiyi.com,REJECT
 DOMAIN-SUFFIX,cm.passport.iqiyi.com,REJECT
 DOMAIN-SUFFIX,count.game.pps.tv,REJECT
-DOMAIN-SUFFIX,cupid.iqiyi.com,REJECT
+//DOMAIN-SUFFIX,cupid.iqiyi.com,REJECT
 DOMAIN-SUFFIX,emoticon.sns.iqiyi.com,REJECT
 DOMAIN-SUFFIX,game.pps.tv,REJECT
 DOMAIN-SUFFIX,gamecenter.iqiyi.com,REJECT
@@ -310,6 +311,7 @@ DOMAIN-SUFFIX,wa.gtimg.com,REJECT
 DOMAIN-SUFFIX,bfshan.cn,REJECT
 
 
+
 # REJECT
 
 // Client
@@ -359,7 +361,6 @@ DOMAIN-SUFFIX,irpmt.mail.163.com,REJECT
 DOMAIN-SUFFIX,m.clkservice.youdao.com,REJECT
 DOMAIN-SUFFIX,mimg.126.net,REJECT
 DOMAIN-SUFFIX,mr.da.netease.com,REJECT
-DOMAIN-SUFFIX,n.3g.163.com,REJECT
 DOMAIN-SUFFIX,nc004x.corp.youdao.com,REJECT
 DOMAIN-SUFFIX,nc045x.corp.youdao.com,REJECT
 DOMAIN-SUFFIX,news.push.126.net,REJECT
@@ -375,7 +376,6 @@ DOMAIN-SUFFIX,push.yuedu.163.com,REJECT
 DOMAIN-SUFFIX,qt002x.corp.youdao.com,REJECT
 DOMAIN-SUFFIX,r.mail.163.com,REJECT
 DOMAIN-SUFFIX,rec.g.163.com,REJECT
-DOMAIN-SUFFIX,rlogs.youdao.com,REJECT
 DOMAIN-SUFFIX,s.clkservice.youdao.com,REJECT
 DOMAIN-SUFFIX,shared.youdao.com,REJECT
 DOMAIN-SUFFIX,stat.ws.126.net,REJECT
@@ -389,6 +389,7 @@ DOMAIN-SUFFIX,wr.da.netease.com,REJECT
 DOMAIN-SUFFIX,ydpushserver.youdao.com,REJECT
 
 URL-REGEX,^https?://impservice\..+\.youdao.com,REJECT
+
 
 
 // 10000
@@ -594,7 +595,6 @@ DOMAIN-SUFFIX,eiv.baidu.com,REJECT
 DOMAIN-SUFFIX,em.baidu.com,REJECT
 DOMAIN-SUFFIX,entry.baidu.com,REJECT
 DOMAIN-SUFFIX,ers.baidu.com,REJECT
-DOMAIN-SUFFIX,f10.baidu.com,REJECT
 DOMAIN-SUFFIX,fc-feed.cdn.bcebos.com,REJECT
 DOMAIN-SUFFIX,fclick.baidu.com,REJECT
 DOMAIN-SUFFIX,fexclick.baidu.com,REJECT
@@ -757,7 +757,6 @@ DOMAIN-SUFFIX,doubleclick.net,REJECT
 DOMAIN-SUFFIX,google-analytics.com,REJECT
 DOMAIN-SUFFIX,googlesyndication.com,REJECT
 DOMAIN-SUFFIX,googletagmanager.com,REJECT
-DOMAIN-SUFFIX,googletakes.com,REJECT
 DOMAIN-SUFFIX,mobileads.google.com,REJECT
 DOMAIN-SUFFIX,pagead.google.com,REJECT
 DOMAIN-SUFFIX,pagead.l.google.com,REJECT
@@ -1025,7 +1024,10 @@ DOMAIN-SUFFIX,guangzhuiyuan.com,REJECT
 // Tencent
 DOMAIN-SUFFIX,btrace.qq.com,REJECT
 DOMAIN-SUFFIX,e.qq.com,REJECT
-DOMAIN-SUFFIX,l.qq.com,REJECT
+//DOMAIN-SUFFIX,l.qq.com,REJECT
+DOMAIN-SUFFIX,lives.l.qq.com,REJECT
+DOMAIN-SUFFIX,livep.l.qq.com,REJECT
+DOMAIN-SUFFIX,news.l.qq.com,REJECT
 DOMAIN-SUFFIX,mi.gdt.qq.com,REJECT
 DOMAIN-SUFFIX,mtrace.qq.com,REJECT
 DOMAIN-SUFFIX,pingma.qq.com,REJECT
