--- a/Quantumult_media_only.conf
+++ b/Quantumult_media_only.conf
@@ -1,6 +1,7 @@
-# 2018年12月7日 16:17 UTC/GMT +9
+# 2018年12月7日 16:24 UTC/GMT +9
 
-#「设置」——「订阅」——「+」——「分流」，输入名字（随意，如"Stick Media Only"），填上链接地址，勾选个性化保存，保存找到选项，左滑选择「替换」，然后「保存」。
+#「设置」——「订阅」——「+」——「分流」，输入名字（随意，如"Stick Media Only"）
+# 填上链接地址，勾选个性化保存，保存找到选项，左滑选择「替换」，然后「保存」
 
 [SERVER]
 
