--- a/config.yml
+++ b/config.yml
@@ -130,7 +130,7 @@ Rule:
 
 #- DOMAIN,e.crashlytics.com,REJECT //注释此选项有助于大多数App开发者分析崩溃信息；如果您拒绝一切崩溃数据统计、搜集，请取消 # 注释
 
-# China Media (中国媒体)
+# China Media（中国媒体）
 # bilibili
 - DOMAIN-KEYWORD,bilibili,China_media
 - DOMAIN-SUFFIX,acgvideo.com,China_media
@@ -159,7 +159,7 @@ Rule:
 # Youku
 - IP-CIDR,106.11.0.0/16,China_media
 
-# Global Media (国际媒体)
+# Global Media（国际媒体）
 - DOMAIN-SUFFIX,edgedatg.com,Global_media
 - DOMAIN-SUFFIX,go.com,Global_media
 - DOMAIN,linear-abematv.akamaized.net,Global_media
@@ -430,6 +430,7 @@ Rule:
 - DOMAIN-SUFFIX,cocoapods.org,Proxy
 - DOMAIN-SUFFIX,comodoca.com,Proxy
 - DOMAIN-SUFFIX,content.office.net,Proxy
+- DOMAIN-SUFFIX,cordcloud.com,Proxy
 - DOMAIN-SUFFIX,crashlytics.com,Proxy
 - DOMAIN-SUFFIX,culturedcode.com,Proxy
 - DOMAIN-SUFFIX,d.pr,Proxy
