--- a/Quantumult_media_only.conf
+++ b/Quantumult_media_only.conf
@@ -1,4 +1,4 @@
-# 2018年12月8日 15:21 UTC/GMT +9
+# 2019年01月03日 02:06 UTC/GMT +8
 
 #「设置」——「订阅」——「+」——「分流」，输入名字（随意，如"Stick Media Only"）
 # 填上链接地址，勾选个性化保存，保存找到选项，左滑选择「替换」，然后「保存」
@@ -116,7 +116,6 @@ DOMAIN-SUFFIX,qosp.msg.71.am,REJECT
 DOMAIN-SUFFIX,static.g.iqiyi.com,REJECT
 DOMAIN-SUFFIX,static.g.ppstream.com,REJECT
 DOMAIN-SUFFIX,store.iqiyi.com,REJECT
-DOMAIN-SUFFIX,t7z.cupid.iqiyi.com,REJECT
 DOMAIN-SUFFIX,tracker.sns.iqiyi.com,REJECT
 DOMAIN-SUFFIX,yuedu.iqiyi.com,REJECT
 URL-REGEX,^https?:\/\/.+/videos/other/.+,REJECT
@@ -8254,6 +8253,11 @@ DOMAIN-SUFFIX,zzz7.52896368.com,REJECT
 DOMAIN-SUFFIX,zzzzz4.52896368.com,REJECT
 
 # China Media
+// AcFun
+USER-AGENT,AcFun*,PROXY
+DOMAIN-SUFFIX,acfun.cn,PROXY
+DOMAIN-SUFFIX,acfun.com,PROXY
+DOMAIN-SUFFIX,aixifan.com,PROXY
 // Bilibili
 USER-AGENT,*bili*,PROXY
 PROCESS-NAME,com.bilibili.app.in,PROXY
@@ -8261,7 +8265,6 @@ PROCESS-NAME,tv.danmaku.bili,PROXY
 DOMAIN-KEYWORD,bilibili,PROXY
 DOMAIN-SUFFIX,acgvideo.com,PROXY
 DOMAIN-SUFFIX,hdslb.com,PROXY
-
 // IQIYI
 USER-AGENT,QIYI*,PROXY
 USER-AGENT,iQiYi*,PROXY
@@ -8270,28 +8273,27 @@ DOMAIN-SUFFIX,qy.net,PROXY
 IP-CIDR,101.227.0.0/16,PROXY,no-resolve
 IP-CIDR,101.224.0.0/13,PROXY,no-resolve
 IP-CIDR,119.176.0.0/12,PROXY,no-resolve
-
 // letv
 DOMAIN-SUFFIX,api.mob.app.letv.com,PROXY
-
-// MOO
-USER-AGENT,MOO*,PROXY
-
+// MGTV
+USER-AGENT,MGTV*,PROXY
+DOMAIN-SUFFIX,hunantv.com,PROXY
+DOMAIN-SUFFIX,mgtv.com,PROXY
+// MOOMusic
+USER-AGENT,MOO%E9%9F%B3%E4%B9%90*,PROXY
 // NeteaseMusic
 USER-AGENT,%E7%BD%91%E6%98%93%E4%BA%91%E9%9F%B3%E4%B9%90*,PROXY
 USER-AGENT,NeteaseMusic*,PROXY
 DOMAIN-SUFFIX,music.126.net,PROXY
 DOMAIN-SUFFIX,music.163.com,PROXY
-
 // QQMusic
 USER-AGENT,QQ%e9%9f%b3%e4%b9%90*,PROXY
 USER-AGENT,QQMusic*,PROXY
 DOMAIN-SUFFIX,music.qq.com,PROXY
 DOMAIN-SUFFIX,y.qq.com,PROXY
-
+DOMAIN,aqqmusic.tc.qq.com,PROXY
 // Tencent Video
 DOMAIN-SUFFIX,vv.video.qq.com,PROXY
-
 // Youku
 IP-CIDR,106.11.0.0/16,PROXY,no-resolve
 
