--- a/Quantumult_media_only.conf
+++ b/Quantumult_media_only.conf
@@ -1,4 +1,4 @@
-# 2019年01月05日 19:19 UTC/GMT +8
+# 2019年03月04日 14:06 UTC/GMT +9
 
 #「设置」——「订阅」——「+」——「分流」，输入名字（随意，如"Stick Media Only"）
 # 填上链接地址，勾选个性化保存，保存找到选项，左滑选择「替换」，然后「保存」
@@ -575,6 +575,7 @@ DOMAIN-SUFFIX,51vipedu.com,REJECT
 DOMAIN-SUFFIX,51weidashi.com,REJECT
 DOMAIN-SUFFIX,51xumei.com,REJECT
 DOMAIN-SUFFIX,51yes.com,REJECT
+DOMAIN-SUFFIX,51zhanzhuang.cn,REJECT
 DOMAIN-SUFFIX,5207470.com,REJECT
 DOMAIN-SUFFIX,5269120.com,REJECT
 DOMAIN-SUFFIX,526d.uunice.com,REJECT
@@ -885,7 +886,6 @@ DOMAIN-SUFFIX,access.njherald.com,REJECT
 DOMAIN-SUFFIX,ac-gb.mgid.com,REJECT
 DOMAIN-SUFFIX,acint.net,REJECT
 DOMAIN-SUFFIX,acm.dzwww.com,REJECT
-DOMAIN-SUFFIX,acs4baichuan.m.taobao.com,REJECT
 DOMAIN-SUFFIX,acs86.com,REJECT
 DOMAIN-SUFFIX,acsystem.wasu.cn,REJECT
 DOMAIN-SUFFIX,act2.mediafour.com,REJECT
@@ -1316,6 +1316,7 @@ DOMAIN-SUFFIX,adsolution.imtt.qq.com,REJECT
 DOMAIN-SUFFIX,adsor.openrunner.com,REJECT
 DOMAIN-SUFFIX,adsp.xunlei.com,REJECT
 DOMAIN-SUFFIX,ad-specs.guoshipartners.com,REJECT
+
 DOMAIN-SUFFIX,adsqqclick.qq.com,REJECT
 DOMAIN-SUFFIX,adsremote.scrippsnetworks.com,REJECT
 DOMAIN-SUFFIX,adsrvr.org,REJECT
@@ -2004,7 +2005,6 @@ DOMAIN-SUFFIX,btlaunch.baidu.com,REJECT
 DOMAIN-SUFFIX,btn.onlylady.com,REJECT
 DOMAIN-SUFFIX,btn.pchome.net,REJECT
 DOMAIN-SUFFIX,btr.domywife.com,REJECT
-DOMAIN-SUFFIX,btrace.qq.com,REJECT
 DOMAIN-SUFFIX,bttrack.com,REJECT
 DOMAIN-SUFFIX,btyou.com,REJECT
 DOMAIN-SUFFIX,bu01.zybang.com,REJECT
@@ -2456,7 +2456,6 @@ DOMAIN-SUFFIX,com-eonsun-owl.oss-cn-hangzhou.aliyuncs.com,REJECT
 DOMAIN-SUFFIX,com-eonsun-owl-user.oss-cn-hangzhou.aliyuncs.com,REJECT
 DOMAIN-SUFFIX,comesgo.com,REJECT
 DOMAIN-SUFFIX,comet.yahoo.com,REJECT
-DOMAIN-SUFFIX,comm.app.autohome.com.cn,REJECT
 DOMAIN-SUFFIX,conf.funshion.com,REJECT
 DOMAIN-SUFFIX,conf.vidown.cn,REJECT
 DOMAIN-SUFFIX,conf.xiniuz.com,REJECT
@@ -2810,7 +2809,6 @@ DOMAIN-SUFFIX,df3n43m.com,REJECT
 DOMAIN-SUFFIX,df77.com,REJECT
 DOMAIN-SUFFIX,dfad.dfdaily.com,REJECT
 DOMAIN-SUFFIX,dfc1.benbaisteel.com,REJECT
-DOMAIN-SUFFIX,dfp.suning.com,REJECT
 DOMAIN-SUFFIX,dfx.shhuixiangwuliu.com,REJECT
 DOMAIN-SUFFIX,dfx.vnnv777.cn,REJECT
 DOMAIN-SUFFIX,dgfggy.com,REJECT
@@ -4817,7 +4815,6 @@ DOMAIN-SUFFIX,liveupdate.mac.sandai.net,REJECT
 DOMAIN-SUFFIX,lixiangmo.com,REJECT
 DOMAIN-SUFFIX,ljrtb.cn,REJECT
 DOMAIN-SUFFIX,lkf1.m.sanhao3.com,REJECT
-DOMAIN-SUFFIX,lkme.cc,REJECT
 DOMAIN-SUFFIX,ll.a.hulu.com,REJECT
 DOMAIN-SUFFIX,ll.gxsky.com,REJECT
 DOMAIN-SUFFIX,ll.hudong.com,REJECT
@@ -7834,7 +7831,6 @@ DOMAIN-SUFFIX,xdadevelopers.browsi.mobi,REJECT
 DOMAIN-SUFFIX,xdbwc.com,REJECT
 DOMAIN-SUFFIX,xdcqcyp.com,REJECT
 DOMAIN-SUFFIX,xdcs-collector.ximalaya.com,REJECT
-DOMAIN-SUFFIX,xdrig.com,REJECT
 DOMAIN-SUFFIX,xdyjt.com,REJECT
 DOMAIN-SUFFIX,xe2c.com,REJECT
 DOMAIN-SUFFIX,xf.yellowto.com,REJECT
@@ -8260,8 +8256,12 @@ DOMAIN-SUFFIX,hdslb.com,PROXY
 // IQIYI
 USER-AGENT,QIYI*,PROXY
 USER-AGENT,iQiYi*,PROXY
-DOMAIN-KEYWORD,qiyi,PROXY
+USER-AGENT,PPStream*,PROXY
+USER-AGENT,QYPlayer*,PROXY
+DOMAIN-SUFFIX,iqiyi.com,PROXY
+DOMAIN-SUFFIX,iqiyipic.com,PROXY
 DOMAIN-SUFFIX,qy.net,PROXY
+DOMAIN-SUFFIX,71.am,PROXY
 IP-CIDR,101.227.0.0/16,PROXY,no-resolve
 IP-CIDR,101.224.0.0/13,PROXY,no-resolve
 IP-CIDR,119.176.0.0/12,PROXY,no-resolve
