更新广告拦截，尝试修复爱奇艺观看问题

--- a/Quantumult_media_only_lite.conf
+++ b/Quantumult_media_only_lite.conf
@@ -1,4 +1,4 @@
-# 2019年01月05日 19:27 UTC/GMT +9
+# 2019年03月04日 14:18 UTC/GMT +9
 
 #「设置」——「订阅」——「+」——「分流」，输入名字（随意，如"Stick Media Only Lite"）
 # 填上链接地址，勾选个性化保存，保存找到选项，左滑选择「替换」，然后「保存」
@@ -63,9 +63,6 @@ DOMAIN-SUFFIX,push-apple.com.akadns.net,DIRECT
 DOMAIN-SUFFIX,gs-loc.apple.com,DIRECT
 DOMAIN-SUFFIX,ls.apple.com,DIRECT
 
-// Client
-PROCESS-NAME,Jietu,REJECT
-
 // UA
 USER-AGENT,BaiduWallet*,REJECT
 
@@ -106,8 +103,6 @@ DOMAIN-SUFFIX,static.g.ppstream.com,REJECT
 DOMAIN-SUFFIX,store.iqiyi.com,REJECT
 DOMAIN-SUFFIX,tracker.sns.iqiyi.com,REJECT
 DOMAIN-SUFFIX,yuedu.iqiyi.com,REJECT
-URL-REGEX,^https?:\/\/.+/videos/other/.+,REJECT
-URL-REGEX,^https?:\/\/paopao\w?\.qiyipic\.com,REJECT
 
 // Youku & Tudou
 DOMAIN-SUFFIX,actives.youku.com,REJECT
@@ -308,10 +303,6 @@ DOMAIN-SUFFIX,wa.gtimg.com,REJECT
 DOMAIN-SUFFIX,bfshan.cn,REJECT
 
 # REJECT
-
-// Client
-PROCESS-NAME,Jietu,REJECT
-
 // 163
 DOMAIN-SUFFIX,a.youdao.com,REJECT
 DOMAIN-SUFFIX,ad.yixin.im,REJECT
@@ -497,7 +488,6 @@ DOMAIN-SUFFIX,wip3.adobe.com,REJECT
 DOMAIN-SUFFIX,wwis-dubc1-vip60.adobe.com,REJECT
 
 // Ali
-DOMAIN-SUFFIX,acs4baichuan.m.taobao.com,REJECT
 //DOMAIN-SUFFIX,adash.man.aliyuncs.com,REJECT
 //DOMAIN-SUFFIX,adashbc.ut.taobao.com,REJECT
 //DOMAIN-SUFFIX,adash-c.ut.taobao.com,REJECT
@@ -996,7 +986,6 @@ DOMAIN-SUFFIX,web.sogou.com,REJECT
 DOMAIN-SUFFIX,guangzhuiyuan.com,REJECT
 
 // Tencent
-DOMAIN-SUFFIX,btrace.qq.com,REJECT
 DOMAIN-SUFFIX,e.qq.com,REJECT
 //DOMAIN-SUFFIX,l.qq.com,REJECT
 DOMAIN-SUFFIX,lives.l.qq.com,REJECT
@@ -1217,8 +1206,12 @@ DOMAIN-SUFFIX,hdslb.com,PROXY
 // IQIYI
 USER-AGENT,QIYI*,PROXY
 USER-AGENT,iQiYi*,PROXY
-DOMAIN-KEYWORD,qiyi,PROXY
+USER-AGENT,PPStream*,PROXY
+USER-AGENT,QYPlayer*,PROXY
+DOMAIN-SUFFIX,iqiyi.com,PROXY
+DOMAIN-SUFFIX,iqiyipic.com,PROXY
 DOMAIN-SUFFIX,qy.net,PROXY
+DOMAIN-SUFFIX,71.am,PROXY
 IP-CIDR,101.227.0.0/16,PROXY,no-resolve
 IP-CIDR,101.224.0.0/13,PROXY,no-resolve
 IP-CIDR,119.176.0.0/12,PROXY,no-resolve
